fixing z-index of hero

--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -11,6 +11,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 11;
   // display: none;
 
   .content{
