--- a/src/components/map/map.styles.scss
+++ b/src/components/map/map.styles.scss
@@ -24,13 +24,9 @@ body{margin: 0; padding:0; overflow-x:hidden;}
     width: 100%;
     height: 410px;
     grid-column: full-start / full-end;
-
-  .map-wrap {
-    overflow: hidden;
-
-  }
+    z-index: 0;
 
   #map {
-    position: absolute; top: 0%; bottom: 0; width: 100%;
+    position: absolute; top: 0%; bottom: 0; width: 100%; z-index: 1;
   }
 }
